# kdpo-exploration

./: .gitignore  pyproject.toml
analysis/: inspect_rollouts.py  inspect_teacher_rollout_kl.py  livecodebench_hidden_probe.py
data/: feedback.py
data/dapo_math/: __init__.py  dataset.py  evaluation.py  generate_gold_standard.py  gold_dataset.py  rollout.py
data/livecodebench/: __init__.py  dataset.py  evaluation.py  generate_gold_standard.py  gold_dataset.py  rollout.py
experiments/: common.py
experiments/dapo_math/: common.py  fipo.py  gist.py  opsd.py  opsd_gold.py
experiments/livecodebench/: common.py  fipo.py  gist.py  opsd.py  opsd_gold.py
training/: common.py  train.py  utils.py
training/fipo/: __init__.py  train.py
training/gist/: __init__.py  train.py
training/grpo/: train.py
training/kdpo/: train.py
training/opsd/: EMATeacher.py  __init__.py  train.py
training/sdpo/: EMATeacher.py  train.py
validators/: __init__.py  validator.py
validators/aime2025/: __init__.py  aime2025_validator.py
validators/dapomath/: __init__.py  dapomath_validator.py
validators/fineweb/: __init__.py  fineweb_validator.py
validators/ifeval/: __init__.py  ifeval_validator.py
validators/livecodebench/: __init__.py  livecodebench_validator.py
